--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.5.2",
-    "react-router-dom": "^7.5.2"
+    "react-router-dom": "^7.5.2",
+    "recharts": "^2.15.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
